--- a/src/main/resources/templates/categories/category_detail.html
+++ b/src/main/resources/templates/categories/category_detail.html
@@ -37,19 +37,20 @@
                       <h4>詳細</h4>
                   </div>
                   <div class="card-block">
+					 <th:block th:object="${category}">
                       <div class="form-group row">
                         <div class="col-sm-1">
                           <label for="id">ID</label>
-                          <input type="text" class="form-control" value="1" readonly>
+                          <input type="text" class="form-control" th:field="*{id}" readonly>
                         </div>
                         <div class="col-sm-11">
                           <label for="name">名前</label>
-                          <input type="text" class="form-control" value="カテゴリーA" readonly>
+                          <input type="text" class="form-control" th:field="*{id}" readonly>
                         </div>
                       </div>
                       <div class="btn-toolbar">
                         <div class="ml-2">
-                          <a class="btn btn-secondary waves-effect waves-light" href="#">戻る</a>
+                          <a class="btn btn-secondary waves-effect waves-light" th:href="@{/categories}">戻る</a>
                         </div>
                       </div>
                   </div>
