--- a/src/main/resources/templates/categories/category_form.html
+++ b/src/main/resources/templates/categories/category_form.html
@@ -37,7 +37,7 @@
                       <h4>新規作成</h4>
                   </div>
                   <div class="card-block">
-                    <form th:action="@{/categories/save}" method="post" th:object="${brand}">
+                    <form th:action="@{/categories/save}" method="post" th:object="${category}">
                       <div class="form-group row">
                         <label class="col-sm-2 col-form-label">カテゴリー名</label>
                         <div class="col-sm-10">
@@ -46,7 +46,7 @@
                       </div>
                       <div class="btn-toolbar">
                         <div class="ml-2">
-                          <a class="btn btn-secondary waves-effect waves-light" onClick="history.back()">戻る</a>
+                          <a class="btn btn-secondary waves-effect waves-light" th:href="@{/categories}">戻る</a>
                         </div>
                         <div class="ml-auto mr-2">
                           <button class="btn btn-primary waves-effect waves-light">登録</button>
